changes' is much more useful than 'misc edits' or 'code cleanup'.
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

lib/attackmess: Fix for bug# [ 2565212 ] Output quirk with wraith feed ability
(You You).  Removed 'You' text from the attack messages file.
Rick Tanner 2009-02-11

lib/.collect-stamp, lib/smooth: Both of these are generated by make collect,
  remove them from SVN. The latter file also showed up a lot in svn diff because
  the locally generated copy no longer matched the svn version and no one
  committed the change.
lib/: Add those two removed files to svn:ignore.
lib/Makefile.am: Update to match change, also add some other auto generated
  files to MAINTAINERCLEANFILES.
Arvid Norlander 2009-02-10

include/living.h, include/player.h: Rearrange member order in some structs to
  reduce wasted space due to alignment.
Arvid Norlander 2009-02-10

plugins/cfnewspaper/cfnewspaper.c: Remove unused function.
Arvid Norlander 2009-02-10

types/README: Fix indentation.
Arvid Norlander 2009-02-10

test/templates/logresult.xsl: Fix case of tag, must be lower case since it
  generates XHTML, not HTML.
check-fragment.am: Make report generation work for out of tree builds. We now
  copy the xsl files to test/logs/ before everything else, instead of after. We
  also use the copy now, instead of using the file in test/templates/.
Arvid Norlander 2009-02-10

test/templates/crossfire-logo-unit-failed.png,
  test/templates/crossfire-logo-unit-success.png,
  test/templates/txtlog.png, test/templates/failure.png,
  test/templates/success.png, test/templates/error.png,
  test/templates/crossfire-logo-unit.png: Recompress png images for smaller file
  size.
Arvid Norlander 2009-02-10
