@@ -14,6 +14,10 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+lib/Makefile.am: replace make with $(MAKE) - needed if using non default
+    make, or otherwise have special set up.
+MSW 2009-02-11
+
 lib/attackmess: Fix for bug# [ 2565212 ] Output quirk with wraith feed ability
 (You You).  Removed 'You' text from the attack messages file.
 Rick Tanner 2009-02-11
